[gd_scene load_steps=6 format=3 uid="uid://c0u65cfsdgsvw"]

[ext_resource type="Script" path="res://ui/hud/components/option_enum_container/option_enum_container.gd" id="1_erjp5"]
[ext_resource type="StyleBox" uid="uid://dfwsvn0icxlga" path="res://ui/hud/style_box_styles/sbf_green_hover.tres" id="1_g281u"]
[ext_resource type="StyleBox" uid="uid://ds8wvvvp3lcb4" path="res://ui/hud/style_box_styles/sbf_green_pressed.tres" id="2_wmwfh"]
[ext_resource type="StyleBox" uid="uid://c013wo0nsosjk" path="res://ui/hud/style_box_styles/sbf_green_normal.tres" id="3_d7sxp"]
[ext_resource type="StyleBox" uid="uid://b05i6is3bb4mh" path="res://ui/hud/style_box_styles/sbf_line_background.tres" id="4_b3na0"]

[node name="HBoxContainer" type="HBoxContainer"]
script = ExtResource("1_erjp5")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 14
text = "Label"
vertical_alignment = 1

[node name="ButtonBack" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_styles/hover = ExtResource("1_g281u")
theme_override_styles/pressed = ExtResource("2_wmwfh")
theme_override_styles/normal = ExtResource("3_d7sxp")
text = "<"

[node name="Line" type="LineEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 1
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_styles/read_only = ExtResource("4_b3na0")
theme_override_styles/normal = ExtResource("4_b3na0")
text = "UNIDENTIFIED"
max_length = 16
selecting_enabled = false

[node name="ButtonNext" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_styles/hover = ExtResource("1_g281u")
theme_override_styles/pressed = ExtResource("2_wmwfh")
theme_override_styles/normal = ExtResource("3_d7sxp")
text = ">"

[connection signal="pressed" from="ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="ButtonNext" to="." method="_on_button_next_pressed"]
